# marketplace-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_application_legal_fields.py  0003_initial_catalog_fields.py  0004_consolidate_initial_data.py
app/: main.py  settings.py
app/api/: deps.py
app/api/admin/: applications.py  auth.py  bots.py  dashboard.py  sellers.py
app/api/miniapp/: auth.py  cart.py  catalog.py  checkout.py  orders.py
app/api/public/: applications.py  health.py  setup.py
app/api/seller/: auth.py  catalog.py  dashboard.py  orders.py  settings.py
app/bots/: dispatcher.py
app/bots/handlers/: __init__.py  cart.py  catalog.py  checkout.py  start.py
app/bots/middlewares/: bot_context.py
app/core/: database.py  exceptions.py  logging.py  permissions.py  redis.py  security.py  storage.py
app/models/: __init__.py  admin_user.py  audit.py  base.py  bot.py  customer.py  order.py  product.py  seller.py
app/schemas/: auth.py  bot.py  common.py  order.py  product.py  seller.py
app/utils/: slug.py
scripts/: create_admin.py
