[project]
name = "marketplace-backend"
version = "0.1.0"
description = "Marketplace Bot Platform — FastAPI + aiogram backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "aiogram>=3.15.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "boto3>=1.35.0",
    "Pillow>=11.0.0",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "pytz>=2024.2",
    "python-slugify>=8.0.4",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
